refactor jdl import

--- a/src/main/webapp/app/entities/rfb-location/rfb-location-detail.component.html
+++ b/src/main/webapp/app/entities/rfb-location/rfb-location-detail.component.html
@@ -4,9 +4,9 @@
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="row-md jh-entity-details">
-        <dt><span>Region Name</span></dt>
+        <dt><span>Location Name</span></dt>
         <dd>
-            <span>{{rfbLocation.regionName}}</span>
+            <span>{{rfbLocation.locationName}}</span>
         </dd>
         <dt><span>Run Day Of Week</span></dt>
         <dd>
