--- a/src/main/webapp/app/entities/rfb-location/rfb-location-dialog.component.html
+++ b/src/main/webapp/app/entities/rfb-location/rfb-location-dialog.component.html
@@ -13,9 +13,9 @@
                    [(ngModel)]="rfbLocation.id" readonly />
         </div>
         <div class="form-group">
-            <label class="form-control-label" for="field_regionName">Region Name</label>
-            <input type="text" class="form-control" name="regionName" id="field_regionName"
-                [(ngModel)]="rfbLocation.regionName" />
+            <label class="form-control-label" for="field_locationName">Location Name</label>
+            <input type="text" class="form-control" name="locationName" id="field_locationName"
+                [(ngModel)]="rfbLocation.locationName" />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_runDayOfWeek">Run Day Of Week</label>
