--- a/src/main/webapp/app/entities/rfb-location/rfb-location.component.html
+++ b/src/main/webapp/app/entities/rfb-location/rfb-location.component.html
@@ -17,7 +17,7 @@
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
             <th jhiSortBy="id"><span>ID</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="regionName"><span>Region Name</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="locationName"><span>Location Name</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="runDayOfWeek"><span>Run Day Of Week</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
@@ -25,7 +25,7 @@
             <tbody>
             <tr *ngFor="let rfbLocation of rfbLocations ;trackBy: trackId">
                 <td><a [routerLink]="['../rfb-location', rfbLocation.id ]">{{rfbLocation.id}}</a></td>
-                <td>{{rfbLocation.regionName}}</td>
+                <td>{{rfbLocation.locationName}}</td>
                 <td>{{rfbLocation.runDayOfWeek}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
